# Astraeus

./: genindex.html  index.html  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg
.github/workflows/: ci.yml
api/: astraeus.hdf5IO.Data.html  astraeus.hdf5IO.readH5.html  astraeus.hdf5IO.writeH5.html  astraeus.xarrayIO.concat.html  astraeus.xarrayIO.makeDataset.html  astraeus.xarrayIO.makeFluxLikeDA.html  astraeus.xarrayIO.makeLCDA.html  astraeus.xarrayIO.makeTimeLikeDA.html  astraeus.xarrayIO.makeWaveLikeDA.html  astraeus.xarrayIO.readXR.html  astraeus.xarrayIO.writeXR.html
