[metadata]
name = astraeus
version = 0.3
author = Kevin B. Stevenson
author_email = kbstevenson@gmail.com
description = Exoplanet data reduction I/O with xarray and netCDF support
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/kevin218/Astraeus
project_urls =
    Bug Tracker = https://github.com/kevin218/Astraeus/issues
    Source Code = https://github.com/kevin218/Astraeus
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    h5py
    xarray
    dask
    netCDF4
    h5netcdf
    bottleneck

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    numpydoc
test =
    pytest
    pytest-doctestplus
    flake8
    codecov
    pytest-cov
dev =
    build
    twine
